--- a/ailife8-crawler/pom.xml
+++ b/ailife8-crawler/pom.xml
@@ -2,16 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>ailife-mp-weixin</artifactId>
+        <groupId>com.franklions.ailife</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.franklions.ailife</groupId>
-    <artifactId>ailife-mp-weixin</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>ailife8-webapp</module>
-        <module>ailife8-crawler</module>
-    </modules>
+    <artifactId>ailife8-crawler</artifactId>
 
 
 </project>
