--- a/ailife8-crawler/pom.xml
+++ b/ailife8-crawler/pom.xml
@@ -28,5 +28,15 @@
             <artifactId>webmagic-extension</artifactId>
             <version>0.7.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>6.0.6</version>
+        </dependency>
     </dependencies>
 </project>
