--- a/ailife8-crawler/src/main/resources/application.properties
+++ b/ailife8-crawler/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 #mysql 数据库
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://ec2-54-238-152-106.ap-northeast-1.compute.amazonaws.com:13306/ailife8
+spring.datasource.url=jdbc:mysql://ec2-54-238-152-106.ap-northeast-1.compute.amazonaws.com:13306/ailife8?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=root123456
 
