添加配置文件 定时任务配置信息

--- a/ailife8-crawler/src/main/resources/application.properties
+++ b/ailife8-crawler/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=root123456
 #映射路径 fix bug:建包需要单层建立
 mybatis.mapper-locations=classpath:com/franklions/ailife/crawler/mapper/*.xml
 mybatis.type-aliases-package=com.franklions.ailife.crawler.domain
+
+cron.expression=0 18 17 * * ?
