--- a/ailife8-webapp/src/main/resources/application.properties
+++ b/ailife8-webapp/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 server.port=8080
 spring.application.name=ailife8
+
+wechat.mp.appId=wx75bbd5f6212614f1
+wechat.mp.secret=86a1a1d3e3a73de3a202cf681cab6e86
+wechat.mp.token=WEvUSWnaqIeRMk7Eyt8NJNI4QdjQym86
+wechat.mp.aesKey=Fpwjal3BjEyZSOCpVEuSSphdJJo8w3QwoS9FUv9sd7Q
