--- a/ailife8-webapp/src/main/resources/application.properties
+++ b/ailife8-webapp/src/main/resources/application.properties
@@ -5,3 +5,14 @@ wechat.mp.appId=wx75bbd5f6212614f1
 wechat.mp.secret=86a1a1d3e3a73de3a202cf681cab6e86
 wechat.mp.token=WEvUSWnaqIeRMk7Eyt8NJNI4QdjQym86
 wechat.mp.aesKey=Fpwjal3BjEyZSOCpVEuSSphdJJo8w3QwoS9FUv9sd7Q
+
+
+#mysql 数据库
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://ec2-54-238-152-106.ap-northeast-1.compute.amazonaws.com:13306/ailife8?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=root123456
+
+#映射路径 fix bug:建包需要单层建立
+mybatis.mapper-locations=classpath:com/franklions/ailife/webapp/mapper/*.xml
+mybatis.type-aliases-package=com.franklions.ailife.webapp.domain
