修改日志输出级别

--- a/ailife8-webapp/src/main/resources/application.properties
+++ b/ailife8-webapp/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.datasource.password=root123456
 #映射路径 fix bug:建包需要单层建立
 mybatis.mapper-locations=classpath:com/franklions/ailife/webapp/mapper/*.xml
 mybatis.type-aliases-package=com.franklions.ailife.webapp.domain
+
+logging.level.root=error
+logging.level.com.franklions.ailife.webapp=warn
